# django-triggers

./: .gitignore  .repomixignore  AGENTS.md  LICENSE  PROGRESS.md  README.md  create_test_data.py  pyproject.toml
.github/workflows/: release.yml  test.yml
.tasks/: task-temporal-integration.md
examples/: README.md  check_db.py  debug_hooks.py  debug_temporal.py  medical_appointment_cli.py  medical_appointment_scenario.py  models.py  run_temporal_worker.py  setup_db.py  simplified_example.py  simplified_test.py  test_form_submit.py  test_temporal_integration.py
examples/migrations/: 0001_initial.py
samples/: fixable_test.py  recommended_rules.py  stub_test.py  type_test.py
scripts/: task-complexity-report.json  validate_temporal.py
tests/: conftest.py  manage.py  test_action_count_limit.py  test_action_frequency_limit.py  test_admin_site.py  test_completed_important_task_notification.py  test_completed_task_notification.py  test_conditions.py  test_events.py  test_first_completed_task_notification.py  test_logging_edge_cases.py  test_single_event.py  test_temporal_integration.py  test_temporal_replay.py  test_triggers.py  test_triggers_logging.py  test_uncompleted_task_reminder.py  utils.py
tests/app/: admin.py  apps.py  asgi.py  celery.py  models.py  settings.py  tasks.py  urls.py  wsgi.py
tests/app/migrations/: 0001_initial.py
triggers/: __init__.py  admin.py  apps.py  log.py  models.py  settings.py  tasks.py
triggers/contrib/logging/: __init__.py  admin.py  apps.py  models.py
triggers/contrib/logging/migrations/: 0001_initial.py
triggers/management/commands/: __init__.py  temporal_worker.py
triggers/migrations/: 0001_initial.py  0002_auto_20221021_2046.py  0003_event_delay.py  0004_alter_action_trigger.py  0005_alter_action_triggers.py  0006_remove_action_trigger_old.py
triggers/temporal/: __init__.py  client.py  hooks.py  isolated_workflows.py  worker.py  workflows.py
