[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dj-triggers"
version = "1.1.0"
description = """
A Triggers system for Django made for implementing event-based \
business logic configurable through the Django admin site."""
license = "BSD-3-Clause"
authors = [
    "Dmitry Kolyagin <dmitry.kolyagin@gmail.com>"
]
readme = "README.md"
packages = [{include = "triggers"}]
repository = "https://github.com/cockpithq/django-triggers"
keywords = ["django", "triggers"]
classifiers = [
    "Framework :: Django :: 3",
    "Framework :: Django :: 4"
]

[project]
name = "dj-triggers"
version = "1.1.0"
dependencies = [
    "Django>=3",
    "django-polymorphic>=3,<4",
    "celery>=4.4",
    "django-more-admin-filters>=1.7",
    "temporalio>=1.11.1",
    "asgiref>=3.6.0",
    "setuptools>=80.6.0",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
Django = ">=3"
django-polymorphic = "^3"
celery = ">=4.4"
django-more-admin-filters = "^1.7"

[project.optional-dependencies]
temporal = [
    "temporalio>=1.5.0",
    "asgiref>=3.6.0",
]

[dependency-groups]
dev = [
    "flake8>=5.0.4,<6",
    "Flake8-pyproject>=1.1.0.post0,<2",
    "mypy>=1.0",
    "django-stubs",
    "flake8-django>=1.1.5,<2",
    "pytest>=7.1.3,<8",
    "model-bakery>=1.7.0,<2",
    "pytest-django>=4.5.2,<5",
    "isort>=5.10.1,<6",
    "pytest-cov>=4.0.0,<5",
    "celery-types>=0.14.0,<0.15",
    "flake8-pytest-style>=1.7.2,<2",
]

[tool.flake8]
max-line-length = 100
exclude = [
    "*/migrations/*.py"
]

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError"
]

[tool.django-stubs]
django_settings_module = "tests.app.settings"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = [
    "more_admin_filters",
    "polymorphic.admin",
    "polymorphic.models"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--ds=tests.app.settings",
    "--cov=triggers",
    "--cov-report=term-missing:skip-covered"
]

[tool.isort]
force_sort_within_sections = true
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true
